Added Controller, adding service layer functionality.